<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.GestionInventario">

    <TextView
        android:id="@+id/tvTitleGestionInventario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitleGesInventario"
        android:textAlignment="center"
        android:textSize="38dip"
        android:padding="16dp"/>
    <EditText
        android:id="@+id/etNombreProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etNombreProducto"
        android:layout_marginTop="8dp"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/etCantidadProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etCantidadProducto"
        android:layout_marginTop="8dp"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/etValorProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etPrecio"
        android:layout_marginTop="8dp"
        android:padding="12dp"/>
    <Button
        android:id="@+id/btnAgregarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAgregarPro"
        android:backgroundTint="@color/BotonGeneral"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/btnVolverDashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnVolverDash"
        android:backgroundTint="@color/BotonVolver"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tvTitleListaProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lvListaPro"
        android:textAlignment="center"
        android:textSize="38dip"
        android:padding="16dp"/>
    <ListView
        android:id="@+id/lvListarProducto"
        android:layout_width="match_parent"
        android:layout_height="350dp" />
    <Button
        android:id="@+id/btnApiResProveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConsultarAPI"
        android:backgroundTint="@color/BotonGeneral"
        android:textColor="@color/white"/>
</LinearLayout>