<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".MainActivity"
    android:textAlignment="center">

    <TextView
        android:id="@+id/tvTitleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitleLogin"
        android:textAlignment="center"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="16dp"/>
    <EditText
        android:id="@+id/etMail"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:padding="12dp"
        android:hint="@string/etMail" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="12dp"
        android:hint="@string/etPassword"/>
    <Button
        android:id="@+id/btnAcceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/BotonLogin"
        android:textColor="@color/white"
        android:text="@string/btnAcceder"
        android:padding="12dp"
        android:layout_margin="6dp"/>
    <TextView
        android:id="@+id/tvRecuperarPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Recuperar_Registrar"
        android:text="@string/tvRecuperarPass"
        android:layout_margin="18dp"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/tvRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Recuperar_Registrar"
        android:text="@string/tvRegistrarse"
        android:textAlignment="center"/>
</LinearLayout>