<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".views.Registro">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNuevoUser"
        android:textAlignment="center"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="16dp"/>
    <EditText
        android:id="@+id/etNuevoUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        android:inputType="text"
        android:hint="@string/etNuevoUser"/>
    <EditText
        android:id="@+id/etPassNuevoUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        android:inputType="textPassword"
        android:hint="@string/etNuevaContraseña"/>
    <Button
        android:id="@+id/btnGuardarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/BotonGeneral"
        android:textColor="@color/white"
        android:text="@string/btnGuardarNuevoUser"
        />
    <Button
        android:id="@+id/btnCerrarVen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/BotonVolver"
        android:textColor="@color/white"
        android:text="@string/btnCerrarVentana"
        />
</LinearLayout>